@@ -42,18 +42,7 @@ class rcube_db_sqlsrv extends rcube_db_mssql
         }
 
         if ($table) {
-            // For some unknown reason the constant described in the driver docs
-            // might not exist, we'll fallback to PDO::ATTR_CLIENT_VERSION (#7564)
-            if (defined('PDO::ATTR_DRIVER_VERSION')) {
-                $driver_version = $this->dbh->getAttribute(PDO::ATTR_DRIVER_VERSION);
-            }
-            else if (defined('PDO::ATTR_CLIENT_VERSION')) {
-                $client_version = $this->dbh->getAttribute(PDO::ATTR_CLIENT_VERSION);
-                $driver_version = $client_version['ExtensionVer'];
-            }
-            else {
-                $driver_version = 5;
-            }
+            $driver_version = $this->dbh->getAttribute(PDO::ATTR_DRIVER_VERSION);
 
             // Starting from version 5 of the driver lastInsertId() method expects
             // a sequence name instead of a table name. We'll unset the argument
